--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,18 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
 
   provider: ^4.0.4
+  chopper: ^3.0.2
+  json_annotation: ^3.0.1
+
+  flutter_advanced_networkimage: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.10.0
+  chopper_generator: ^3.0.4
+  json_serializable: ^3.3.0
 
 flutter_icons:
   android: "launcher_icon"
